# Geometric-Modeling

./: .gitignore  README.md
CM1.1/: exo3.md
TP1/MeshViewerCMake/: CMakeLists.txt  helperFunctions.h  main.cpp  myMesh.cpp  myMesh.h  myVertex.cpp  test_mesh.cpp
TP1/MeshViewerCMake/shaders/: light.frag.glsl  light.vert.glsl
